# carboarded

./: .gitignore  AGENTS.md  CLAUDE.md  CONTINUE_SAC_STABILITY.md  MEMORY.md  PHASE_1_COMPLETE.md  PROMPT.md  README.md  RESEARCH_ROADMAP.md  STANDARDS.md  notes
racing_sim/: README.md  coms  pyproject.toml  requirements.txt
racing_sim/analysis/: agents_fast_iter_v3_complex_xlong.yaml  inspect_weights.py  make_plots.py  plot_rule_based_grid.py  tune_rule_based.py
racing_sim/analysis/reports_archive/: README.md
racing_sim/configs/: README.md  default.yaml  fast_iter_v3_complex_sac_bootstrap.yaml  training_presets.yaml  wavy_v2_progress_0p75.yaml  wavy_v2_progress_0p75_3k_steps.yaml
racing_sim/configs/custom_tracks/: simple.yaml  simple_reward_exp.yaml  square_test.yaml  square_test_reward_exp.yaml  supersimple.yaml  track1.yaml  track1_reward_exp.yaml  track2.yaml  track2_reward_exp.yaml  track2_wall_contact.yaml  (+6 more)
racing_sim/scripts/: __init__.py  analyze_tb_metrics.py  create_track.py  physics_probe.py  physics_sweep.py  physics_tuner.py  play.py  train.py  validate.py
racing_sim/tests/: test_collision_termination.py  test_create_track_defaults.py  test_create_track_preview.py  test_custom_track_progress_reward.py  test_env_config_defaults.py  test_fillet_orientation.py  test_off_track.py  test_physics_probe_cli.py  test_physics_sweep_cli.py  test_physics_tuner_cli.py  test_pov_coords.py  test_progress_reward.py  test_random_start_offset.py  test_reward_time_penalty.py  test_rollout_stats.py  test_train_cli.py  test_wall_contact.py  test_weight_stats.py
(+213 files in other folders)
