[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "racing_sim"
version = "0.1.0"
description = "2D autonomous racing car simulation with Lidar and RL"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "gymnasium>=0.29.0",
    "pymunk>=6.6.0",
    "pygame>=2.5.0",
    "stable-baselines3>=2.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.60.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
train = "scripts.train:main"
play = "scripts.play:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["racing_sim*", "scripts*"]
